--- a/src/sections/header/HeaderPage.css
+++ b/src/sections/header/HeaderPage.css
@@ -1,13 +1,24 @@
 .header{
     height: 100vh;
     width:100vw ;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    z-index: -1;
 }
-
-.headerImg{
-
+.cartImageContainer{
     position: absolute;
-    top: 50vh;
-    left: 10vw;
+    top: 50%;
+    left: 10%;
+    z-index: 2;
+    animation-duration: 1s;
+    animation-name: leftImage;
+    animation-fill-mode: forwards;
+    animation-delay: 6s;
+    animation-timing-function: ease-out;
+    visibility: hidden;
+}
+.cartImage{
     height: 49vh;
 }
 
@@ -21,20 +32,192 @@
 }
 
 .firstHeaderText{
-    transform: translate( 50%);
     font-weight: 700;
     font-size: 100px;
+}
+.arabicFirstTextAnimation{
+    animation-duration: 1s;
+    animation-name: rightText;
+    animation-fill-mode: forwards;
+    animation-delay: 6s;
+    animation-timing-function: ease-out;
+    visibility: hidden;
+}
+.EnglishFirstTextAnimation{
+    animation-duration: 1s;
+    animation-name: leftText;
+    animation-fill-mode: forwards;
+    animation-delay: 6s;
+    animation-timing-function: ease-out;
+    visibility: hidden;
 }
 .secondHeaderText{
     font-weight: 500;
     font-size: 20px;
 }
+.arabicSecondTextAnimation{
+    animation-duration: 1s;
+    animation-name: leftText;
+    animation-fill-mode: forwards;
+    animation-delay: 6s;
+    animation-timing-function: ease-out;
+    visibility: hidden;
+}
+.EnglishSecondTextAnimation{
+    animation-duration: 1s;
+    animation-name: rightText;
+    animation-fill-mode: forwards;
+    animation-delay: 6s;
+    animation-timing-function: ease-out;
+    visibility: hidden;
+}
 .colorSection{
     height: 85vh;
-    width:100vw ;
-    background: #cfbe6e ;
+    width:100% ;
+    background-size:cover;
+    z-index: 1;
+    background-image: linear-gradient(to right bottom, rgba(216, 137, 45 ,.9), rgba(216, 137, 45 ,.6)),url('../../img/superMarket.jpeg');
 }
-#phone{
-    position: absolute;
-    top: 0;
+
+
+@keyframes rightText {
+    0% {
+        transform: translate(250%);
+    }
+    90% {
+        transform: translate(40%);
+    }
+    100% {
+        transform: translate(50%);
+        visibility: visible;
+    }
+
+}
+
+@keyframes rightTextMobile {
+    0% {
+        transform: translate(250%);
+    }
+    90% {
+        transform: translate(0%);
+    }
+    100% {
+        transform: translate(10%);
+        visibility: visible;
+    }
+}
+
+@keyframes leftTextMobile {
+    0% {
+        transform: translate(-250%);
+    }
+    90% {
+        transform: translate(0%);
+    }
+    100% {
+        transform: translate(-10%);
+        visibility: visible;
+    }
+}
+
+
+@keyframes leftText {
+    0% {
+        transform: translate(-250%);
+    }
+    90% {
+        transform: translate(10%);
+    }
+    100% {
+        transform: translate(0%);
+        visibility: visible;
+    }
+
+}
+
+@keyframes leftImage {
+
+    0% {
+        transform: translate(-250%);
+    }
+
+    100% {
+        transform: translate(0%);
+        visibility: visible;
+    }
+
+}
+@keyframes leftImageMobile {
+
+    0% {
+        transform: translate(-250%);
+    }
+
+    100% {
+        transform: translate(0%);
+        visibility: visible;
+    }
+
+}
+@media only screen and (max-width: 1024px) {
+    .cartImage {
+        max-width: 800px;
+        max-height: 600px;
+    }
+    .cartImageContainer {
+        top:60%;
+        left: 5%;
+    }
+
+    .arabicFirstTextAnimation{
+        animation-name: rightTextMobile;
+    }
+    .EnglishFirstTextAnimation{
+        animation-name: leftTextMobile;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+    .cartImage {
+        max-width: 400px;
+        max-height: 336px;
+
+    }
+    .cartImageContainer {
+        top:60%;
+        left: 5%;
+    }
+    .arabicFirstTextAnimation{
+        animation-name: rightTextMobile;
+    }
+    .EnglishFirstTextAnimation{
+        animation-name: leftTextMobile;
+    }
+    .EnglishSecondTextAnimation{
+        animation-name: rightTextMobile;
+    }
+
+}
+
+@media only screen and (max-width: 550px) {
+    .cartImage {
+        max-width: 300px;
+        max-height: 252px;
+    }
+
+    .cartImageContainer {
+        top:65%;
+        left: 5%;
+    }
+
+    .firstHeaderText{
+        font-weight: 700;
+        font-size: 75px;
+    }
+    .secondHeaderText{
+        font-weight: 500;
+        font-size: 15px;
+    }
+
 }
