--- a/src/sections/navBar/NavBar.css
+++ b/src/sections/navBar/NavBar.css
@@ -30,7 +30,12 @@
     z-index: 2000;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     text-align: center;
-    cursor: pointer; }
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .navigation__background {
     height: 60px;
@@ -39,7 +44,7 @@
     position: fixed;
     top: 65px;
     right: 65px;
-    background-image: radial-gradient(#e3d078,  #c2a836);
+    background-image: radial-gradient(#d8892d , #e4ad6e);
     z-index: 1000;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
 
@@ -50,6 +55,7 @@
     left: 0;
     z-index: 1500;
     opacity: 0;
+    visibility: hidden;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
@@ -60,10 +66,13 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
-    width: 100%; }
+    width: 100%;
+    padding: 0;
+}
 
 .navigation__item {
-    margin: 10px; }
+    margin: 10px;
+}
 
 .navigation__link:link, .navigation__link:visited {
     display: inline-block;
@@ -74,7 +83,7 @@
     text-decoration: none;
     text-transform: uppercase;
     background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-    background-size: 240%;
+    background-size: 250%;
     transition: all .4s; }
 .navigation__link:link span, .navigation__link:visited span {
     margin-right: 15px;
@@ -90,21 +99,25 @@
 
 .navigation__checkbox:checked ~ .navigation__nav {
     opacity: 1;
-    width: 100%; }
+    width: 100%;
+    visibility: visible;
+}
 
 .navigation__icon {
     position: relative;
-    margin-top: 35px; }
+}
 .navigation__icon, .navigation__icon::before, .navigation__icon::after {
     width: 30px;
     height: 2px;
     background-color: #333;
-    display: inline-block; }
+    display: inline-block;
+}
 .navigation__icon::before, .navigation__icon::after {
     content: "";
     position: absolute;
     left: 0;
-    transition: all .2s; }
+    transition: all .2s;
+}
 .navigation__icon::before {
     top: -8px; }
 .navigation__icon::after {
@@ -130,3 +143,21 @@
 .navigation__link span{
     margin-left: 15px;
 }
+
+
+@media only screen and (max-width: 550px) {
+    .navigation__button {
+        top: 20px;
+        right: 20px;
+        width: 50px;
+        height: 50px;
+    }
+    .navigation__background {
+        top: 25px;
+        right: 25px;
+        width: 40px;
+        height: 40px;
+    }
+
+
+    }
