--- a/src/sections/ourServices/OurServices.css
+++ b/src/sections/ourServices/OurServices.css
@@ -1,14 +1,26 @@
 
 .ourServices{
     height: auto;
-    width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction:column;
-    padding: 100px  0 100px 0;
-    font-family: 'Cairo', sans-serif;
+    padding: 100px 0 100px 0 ;
+    margin-top:100px;
+    /*font-family: 'Cairo', sans-serif;*/
+    /*background-color: #fcfcfc;*/
 }
+
+/*.ourServices::before {*/
+/*    content: " ";*/
+/*    background-image: linear-gradient(to right bottom, rgba(216, 137, 45 ,.9), rgba(216, 137, 45 ,.6)),url('../../img/superMarket.jpeg');*/
+/*    clip-path: polygon(50% 70%, 0 100%, 100% 100%);*/
+/*    position: absolute;*/
+/*    top: 75vh;*/
+/*    height: 85vh;*/
+/*    width: 100vw;*/
+/*    z-index: -1;*/
+/*}*/
 .sectionTitle{
     font-size: 60px;
     margin-bottom:80px;
@@ -29,7 +41,7 @@
     .row:not(:last-child) {
         margin-bottom: 60px; }
     .row:first-child {
-        margin-top: 200px;
+        margin-top: 0px;
     }
 }
 @media only screen and (max-width: 56.25em) {
@@ -41,10 +53,10 @@
     display: table;
     clear: both; }
 .row [class^="col-"] {
-    float: left;
+    float: right;
 }
 .row [class^="col-"]:not(:last-child) {
-    margin-right: 60px; }
+    margin-left: 60px; }
 .row .col-1-of-2 {
     width: calc((100% - 60px) / 2); }
 .row .col-1-of-3 {
@@ -52,7 +64,8 @@
 .row .col-2-of-3 {
     width: calc(2 * ((100% - 2 * 60px) / 3) + 60px); }
 .row .col-1-of-4 {
-    width: calc((100% - 3 * 60px) / 4); }
+    width: calc((100% - 3 * 60px) / 4);
+}
 .row .col-2-of-4 {
     width: calc(2 * ((100% - 3 * 60px) / 4) + 60px); }
 .row .col-3-of-4 {
@@ -66,6 +79,10 @@
     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
     transition: transform .3s;
 }
+.feature-box__text{
+    height: 200px;
+    overflow: hidden;
+}
 .feature-box__icon {
     font-size: 60px;
     margin-bottom: 5px;
@@ -76,10 +93,18 @@
 .feature-box:hover {
     transform: translateY(-15px) scale(1.03); }
 
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 62.5em) {
     .row [class^="col-"]:not(:last-child) {
         margin-right: 0;
-        margin-bottom: 60px; } }
-@media only screen and (max-width: 56.25em) {
+        margin-bottom: 60px; }
+
+}
+.feature-box__text{
+    height: 100px;
+    overflow: hidden;
+}
+
+@media only screen and (max-width: 62.5em) {
     .row [class^="col-"] {
-        width: 100% !important; } }
+        width: 100% !important; }
+}
